# converge

./: .cursorrules  .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTOR_GUIDE.md  Cargo.toml  DESIGN_TENETS.md  DOCUMENTATION_REORGANIZATION.md  Justfile  LIBRARY_PUBLISHING_SETUP.md  LICENSE  LONG_TERM_STRATEGIC_PLAN.md  README.md  SECURITY.md  SPECIFICATION_COMPLIANCE_ASSESSMENT.md  USE_CASE_TRACKER.md  docker-compose.yml
.github/workflows/: ci.yml  publish.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/authority_lifecycle_20260104/: metadata.json  plan.md  spec.md
conductor/tracks/core_finalization_20260104/: metadata.json  plan.md  spec.md
conductor/tracks/engine_convergence_20260104/: metadata.json  plan.md  spec.md
converge-domain/: Cargo.toml  README.md
converge-domain/src/: catalog_enrichment.rs  catalog_enrichment_llm.rs  compliance_monitoring.rs  compliance_monitoring_llm.rs  crm_account_health.rs  crm_account_health_llm.rs  eval_agent.rs  evals.rs  growth_strategy.rs  growth_strategy_llm.rs  inventory_rebalancing.rs  inventory_rebalancing_llm.rs  lib.rs  llm_utils.rs  meeting_scheduler.rs  meeting_scheduler_llm.rs  release_readiness.rs  resource_routing.rs  strategic_sourcing.rs  strategic_sourcing_llm.rs  stress_tests.rs  supply_chain.rs
converge-domain/tests/: catalog_enrichment_verbose.rs  compliance_monitoring_verbose.rs  crm_account_health_verbose.rs  growth_strategy_llm_verbose.rs  growth_strategy_verbose.rs  hr_policy_alignment_verbose.rs  inventory_rebalancing_verbose.rs  llm_growth_strategy.rs  meeting_scheduler_verbose.rs  release_readiness_verbose.rs  resource_routing_verbose.rs  strategic_sourcing_verbose.rs  supply_chain_verbose.rs
converge-provider/: Cargo.toml  README.md
converge-provider/examples/: model_selection_example.rs  runtime_selection_example.rs
converge-provider/src/: anthropic.rs  apertus.rs  baidu.rs  common.rs  common_example.rs  deepseek.rs  factory.rs  gemini.rs  grok.rs  kimi.rs  lib.rs  minmax.rs  mistral.rs  model_selection.rs  openai.rs  openrouter.rs  perplexity.rs  prompt.rs  qwen.rs  zhipu.rs
converge-provider/src/vector/: lancedb.rs  memory.rs  mod.rs
converge-provider/tests/: FIXES.md  README.md  SECURE_SETUP.md  integration_prompt_formatting.rs  run_integration_tests.sh
converge-runtime/: API_EXAMPLES.md  Cargo.toml  Dockerfile  README.md
converge-runtime/examples/: curl-examples.sh  postman-collection.json
converge-runtime/src/: api.rs  config.rs  error.rs  grpc.rs  handlers.rs  http.rs  main.rs  state.rs  tui.rs
converge-runtime/src/db/: jobs.rs  mod.rs  users.rs
converge-runtime/src/gcp/: config.rs  firestore.rs  mod.rs  service_directory.rs
converge-tool/: Cargo.toml  README.md
converge-tool/src/: gherkin.rs  lib.rs
converge-tool/tests/: integration_gherkin_validation.rs
docker/: Dockerfile  Dockerfile.dev
docker/firebase/: Dockerfile  firebase.json  firestore.rules
docs/: API_EXAMPLES.md  ARTICLE_AGENT_SDKS_VS_CONVERGE_PROVIDERS.md  CONVERGENCE_PROOFS.md  ENGINE_EXECUTION_MODEL.md  PUBLISHING.md  README.md
docs/01-core-philosophy/: MANIFESTO.md  README.md
docs/02-architecture/: AGENTS.md  AGENT_LIFECYCLE.md  ARCHITECTURE.md  COMMUNICATION_MODEL.md  GHERKIN_MODEL.md  LLM_INTEGRATION.md  README.md  ROOT_INTENT_SCHEMA.md
docs/03-use-cases/: CONTEXT_SCHEMA_GROWTH.md  CONVERGE_GROWTH_STRATEGY_USECASE.md  CONVERGE_MEETING_SCHEDULER_USECASE.md  CONVERGE_RESOURCE_ROUTING_USECASE.md  README.md
docs/04-reference-comparisons/: DISTRIBUTED_SYSTEMS.md  FAILURE_MODES.md  RUST_MEMORY_MODEL.md  SCALING_MODEL.md  TEMPORAL_MODEL.md
docs/05-development/: DECISIONS.md  DEPLOYMENT.md  EDN_WITHOUT_XML_ANALYSIS.md  ERROR_HANDLING_EXPLAINED.md  ERROR_HANDLING_REFACTORING.md  GHERKIN_HITL_EXAMPLES.md  HUMAN_IN_THE_LOOP.md  LLM_PROVIDER_KEYS.md  MODEL_SELECTION.md  PROMPT_DSL_IMPLEMENTATION.md  PROVIDER_COMPLETION.md  PROVIDER_PROMPT_STRUCTURING.md  PUBLISHING.md  RAYON_TOKIO_INTEGRATION.md  README.md  REFACTORING_SUMMARY.md  SECURE_API_KEY_SETUP.md  STATUS.md
docs/06-assistant-guides/: README.md  codex-assistant-coder.md  cursor-use-case-owner-coder.md  gemini-cloudops.md
docs/agents/: AGENT_MODEL.md  EVALS.md  LLM_INTEGRATION.md  PROMPT_CONTRACT.md  README.md
docs/architecture/: ARCHITECTURE.md  CONVERGENCE_PROOFS.md  CONVERGENCE_SEMANTICS.md  ENGINE_EXECUTION_MODEL.md  README.md
docs/assistant-guides/: README.md
docs/deployment/: DEPLOYMENT.md  README.md  TECHNOLOGY_STACK.md
docs/development/: DECISIONS.md  MODEL_SELECTION_ARCHITECTURE.md  MODEL_SELECTION_QUICK_START.md  PROJECT_PLAN.md  PROMPT_DSL_IMPLEMENTATION.md  PROMPT_FORMATTING_INTEGRATION_TESTS.md  PROVIDER_IMPLEMENTATIONS.md  PROVIDER_PROMPT_STRUCTURING.md  PROVIDER_REFACTORING.md  RAYON_TOKIO_INTEGRATION.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  RUNTIME_MODEL_SELECTION.md  SPECIFICATION_COMPLIANCE_ASSESSMENT.md  TASKS.md  YAML_CONFIGURATION.md
docs/governance/: README.md  TERMINOLOGY.md
docs/internal/: README.md
docs/product/: FAQ.md  PRODUCT_GUIDE.md  README.md
docs/public/: API_OVERVIEW.md  CORE_CONCEPTS.md  README.md  USAGE_GUIDE.md
docs/reference/: ACTORS.md  OTP_MODEL.md  README.md  REFERENCE_ARCHITECTURES.md  WHY_NOT_ACTORS.md
docs/testing/: GHERKIN_VALIDATION_TESTS.md  README.md
docs/use-cases/: BUSINESS_SOLUTIONS_CATALOG.md  CONVERGE_CATALOG_ENRICHMENT_USECASE.md  CONVERGE_COMPLIANCE_MONITORING_USECASE.md  CONVERGE_CRM_ACCOUNT_HEALTH_USECASE.md  CONVERGE_GROWTH_STRATEGY_USECASE.md  CONVERGE_INVENTORY_REBALANCING_USECASE.md  CONVERGE_MEETING_SCHEDULER_USECASE.md  CONVERGE_RELEASE_READINESS_USECASE.md  CONVERGE_RESOURCE_ROUTING_USECASE.md  CONVERGE_SDR_SALES_USECASE.md  CONVERGE_STRATEGIC_SOURCING_USECASE.md  CONVERGE_SUPPLY_CHAIN_USECASE.md  GROWTH_STRATEGY_FLOW_ANALYSIS.md  JOBS_TO_BE_DONE_FRAMEWORK.md  README.md  README_USE_CASE_DEVELOPMENT.md  SMB_PLATFORM_PLACEHOLDER.md  USE_CASE_ITERATION_GUIDE.md  USE_CASE_REVIEW_PROCESS.md
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
(+25 files in other folders)
