[workspace]
resolver = "2"
members = [
    "converge-core",
    "converge-provider",
    "converge-domain",
    "converge-tool",
    "converge-runtime",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# Internal crates
# Both path (local dev) and version (crates.io) specified
# Cargo uses path when in workspace, version when published
converge-core = { path = "converge-core", version = "0.6" }
converge-provider = { path = "converge-provider", version = "0.2" }
converge-domain = { path = "converge-domain", version = "0.2" }
converge-tool = { path = "converge-tool", version = "0.2" }

# Shared dependencies
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common pedantic patterns
similar_names = "allow"              # Variable naming is subjective
too_many_lines = "allow"             # Verbose tests are intentional
items_after_statements = "allow"     # Common in local struct definitions
ignore_without_reason = "allow"      # Test ignores don't need justification
unnecessary_wraps = "allow"          # Scaffold code may need Result later
overly_complex_bool_expr = "allow"   # assert!(x || !x) is intentional no-op
single_match_else = "allow"          # match is sometimes clearer
semicolon_if_nothing_returned = "allow" # Style preference
module_name_repetitions = "allow"    # Common naming pattern
vec_init_then_push = "allow"         # Clear construction pattern
cast_possible_truncation = "allow"   # Domain indices are small
cast_possible_wrap = "allow"         # Domain indices are small
comparison_chain = "allow"           # if-else is sometimes clearer
if_same_then_else = "allow"          # Intentional for clarity
unused_self = "allow"                # Methods may be extended later
cast_precision_loss = "allow"        # f64 precision loss acceptable for metrics
manual_let_else = "allow"            # if-let is sometimes clearer
if_not_else = "allow"                # Negation is sometimes clearer
map_unwrap_or = "allow"              # map().unwrap_or_else() is clearer
