[package]
name = "converge-domain"
description = "Domain-specific agents and examples for Converge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/kpernyer/converge"
documentation = "https://docs.rs/converge-domain"
keywords = ["agent", "domain", "converge", "multi-agent"]
categories = ["algorithms", "simulation"]

[dependencies]
converge-core = { workspace = true }
converge-provider = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-test = "0.2"
dotenv = "0.15"

[lints]
workspace = true
