[package]
name = "converge-provider"
description = "LLM provider implementations for Converge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/kpernyer/converge"
documentation = "https://docs.rs/converge-provider"
keywords = ["llm", "ai", "provider", "converge"]
categories = ["api-bindings", "web-programming"]

[dependencies]
converge-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
