[package]
name = "converge-provider"
description = "LLM provider implementations for Converge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/kpernyer/converge"
documentation = "https://docs.rs/converge-provider"
keywords = ["llm", "ai", "provider", "converge"]
categories = ["api-bindings", "web-programming"]

[dependencies]
converge-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
schemars = "0.8"
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = "0.22"

# Async runtime (for blocking on async in sync traits)
tokio = { version = "1.42", features = ["rt-multi-thread"] }

# Optional dependencies for vector stores
lancedb = { version = "0.21", optional = true }
arrow-array = { version = "55", optional = true }
arrow-schema = { version = "55", optional = true }
futures = { version = "0.3", optional = true }
# qdrant-client = { version = "1.8", optional = true }

[features]
default = []
# Enable LanceDB embedded vector store
lancedb = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema", "dep:futures"]
# Enable Qdrant distributed vector store
qdrant = []
# Enable Neo4j graph store
neo4j = []
# Enable all vector stores
all-vector = ["lancedb", "qdrant"]
# Enable all stores
all-stores = ["lancedb", "qdrant", "neo4j"]

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
