[package]
name = "converge-runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Converge HTTP/gRPC/TUI runtime server"
license = "MIT"

[dependencies]
# Core library
converge-core = { path = "../converge-core" }

# HTTP server (Axum)
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# OpenAPI documentation
utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# gRPC (Tonic) - prepared but not implemented yet
tonic = { version = "0.11", optional = true }
prost = { version = "0.13", optional = true }

# TUI (ratatui) - prepared but not implemented yet
ratatui = { version = "0.27", optional = true }
crossterm = { version = "0.28", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Configuration
config = "0.14"

[features]
default = ["http"]
http = []
grpc = ["tonic", "prost"]
tui = ["ratatui", "crossterm"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
