[package]
name = "converge-tool"
description = "Development tools for Converge including Gherkin spec validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/kpernyer/converge"
documentation = "https://docs.rs/converge-tool"
keywords = ["gherkin", "testing", "converge", "development"]
categories = ["development-tools", "development-tools::testing"]

[dependencies]
converge-core = { workspace = true }
converge-provider = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

# Gherkin parsing
gherkin = "0.14"

[lints]
workspace = true
